<?xml version="1.0"?>
<package>
  <name>refills_counting_image_saver</name>
  <version>0.9.0</version>
  <description>
    Saving from stream topics pictures with given name.
  </description>
  <maintainer email="hassouna@uni-bremen.de">Vanessa Hassouna</maintainer>
  <license>test</license>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
